--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <main>
-        <div class="bg-tutorial-bg min-h-screen bg-cover bg-center object-cover">
+        <div class="bg-[url('./img/main-bg.jpg')] min-h-screen bg-cover bg-center object-cover">
             <div class="flex flex-col sm:flex-row items-center justify-center mx-auto container md:justify-around py-10 sm:py-20 md:py-40">
                 <div class="select-none pb-5 md:pb-0 sm:mx-10">
                     <h1 class="text-4xl xs:text-6xl text-bold">
